# qmqtt

./: .gitignore  .qmake.conf  .travis.yml  CMakeLists.txt  LICENSE  README.md  Specification.txt  notes.txt  qmqtt.cpp  qmqtt.h  qmqtt.pri  qmqtt.pro  qmqtt_client.cpp  qmqtt_client.h  qmqtt_client_p.cpp  qmqtt_client_p.h  qmqtt_frame.cpp  qmqtt_frame.h  qmqtt_global.h  qmqtt_message.cpp  qmqtt_message.h  qmqtt_network.cpp  qmqtt_network.h  qmqtt_packet.h  qmqtt_routedmessage.cpp  qmqtt_router.cpp  qmqtt_router.h  qmqtt_routesubscription.cpp  qmqtt_routesubscription.h  qmqtt_will.cpp  qmqtt_will.h  sync.profile
example/: example.cpp  example.pro
examples/: CMakeLists.txt  examples.qbs  qmqttPublisher.cpp  qmqttSubscriber.cpp
examples/mqtt/: mqtt.qbs
examples/mqtt/client/: client.pro
examples/qmqtt/: CMakeLists.txt
examples/qmqtt/client/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  qmqtt.pri  qmqtt.pro  qmqtt_abstractpacket.cpp  qmqtt_abstractpacket.h  qmqtt_client.cpp  qmqtt_client.h  qmqtt_client_p.cpp  qmqtt_client_p.h  qmqtt_connackpacket.cpp  qmqtt_connackpacket.h  qmqtt_connectpacket.cpp  qmqtt_connectpacket.h  qmqtt_disconnectpacket.cpp  qmqtt_disconnectpacket.h  qmqtt_frame.cpp  qmqtt_frame.h  qmqtt_global.h  qmqtt_message.cpp  qmqtt_message.h  qmqtt_message_p.cpp  qmqtt_message_p.h  qmqtt_network.cpp  qmqtt_network.h  qmqtt_network_p.h  qmqtt_networkinterface.h  qmqtt_pingreqpacket.cpp  qmqtt_pingreqpacket.h  qmqtt_pingresppacket.cpp  qmqtt_pingresppacket.h  qmqtt_pubackpacket.cpp  qmqtt_pubackpacket.h  qmqtt_pubcomppacket.cpp  qmqtt_pubcomppacket.h  qmqtt_publishpacket.cpp  qmqtt_publishpacket.h  qmqtt_pubrecpacket.cpp  qmqtt_pubrecpacket.h  qmqtt_pubrelpacket.cpp  qmqtt_pubrelpacket.h  (+28 more)
src/mqtt/: mqtt.pri  mqtt.pro  mqtt.qbs  mqttModule.qbs  qmqtt.pri  qmqtt.pro  qmqtt.qbs  qmqttModule.qbs  qmqtt_client.cpp  qmqtt_client.h  qmqtt_client_p.cpp  qmqtt_client_p.h  qmqtt_frame.cpp  qmqtt_frame.h  qmqtt_global.h  qmqtt_message.cpp  qmqtt_message.h  qmqtt_message_p.h  qmqtt_network.cpp  qmqtt_network_p.h  qmqtt_networkinterface.h  qmqtt_routedmessage.h  qmqtt_router.cpp  qmqtt_router.h  qmqtt_routesubscription.cpp  qmqtt_routesubscription.h  qmqtt_socket.cpp  qmqtt_socket_p.h  qmqtt_socketinterface.h  qmqtt_ssl_network.cpp  qmqtt_ssl_network_p.h  qmqtt_ssl_socket.cpp  qmqtt_ssl_socket_p.h  qmqtt_timer.cpp  qmqtt_timer_p.h  qmqtt_timerinterface.h  qmqtt_websocket.cpp  qmqtt_websocket_p.h  qmqtt_websocketiodevice.cpp  qmqtt_websocketiodevice_p.h
tests/: CMakeLists.txt  basepackettest.cpp  basepackettest.h  clienttest.cpp  clienttests.cpp  clienttests.h  clienttests.pro  connackpackettest.cpp  connectpackettest.cpp  customprinter.cpp  customprinter.h  disconnectpackettest.cpp  frametest.cpp  frametests.cpp  frametests.h  frametests.pro  iodevicemock.h  messagetest.cpp  messagetests.cpp  messagetests.h  messagetests.pro  networkmock.h  networktest.cpp  networktests.cpp  networktests.h  networktests.pro  pingreqpackettest.cpp  pingresppackettest.cpp  pubackpackettest.cpp  pubcomppackettest.cpp  publishpackettest.cpp  pubrecpackettest.cpp  pubrelpackettest.cpp  routedmessagetests.cpp  routedmessagetests.h  routedmessagetests.pro  routertests.cpp  routertests.h  routertests.pro  routesubscriptiontests.cpp  (+20 more)
tests/auto/: CMakeLists.txt
tests/auto/cmake/: CMakeLists.txt  cmake.pro
tests/benchmarks/: CMakeLists.txt
tests/benchmarks/message/: CMakeLists.txt  main.cpp  message.pro
tests/gtest/: CMakeLists.txt
tests/gtest/gtest/googletest/: CMakeLists.txt
tests/gtest/gtest/googletest/googlemock/: CMakeLists.txt
tests/gtest/gtest/googletest/googletest/: CMakeLists.txt
tests/gtest/gtest/googletest/googletest/scripts/: upload.py
tests/gtest/gtest/googletest/googletest/src/: gtest.cc
tests/gtest/tests/: CMakeLists.txt  clienttest.cpp  customprinter.cpp  frametest.cpp  iodevicemock.h  main.cpp  messagetest.cpp  networkmock.h  networktest.cpp  routedmessagetests.cpp  routertests.cpp  routesubscriptiontests.cpp  socketmock.h  sockettest.cpp  tcpserver.cpp  tcpserver.h  tests.pro  tests.qbs
unittests/: frametests.cpp  frametests.h  messagetests.cpp  messagetests.h  sampletest.h  sampletest2.h  tcpserver.cpp  tcpserver.h  testmain.cpp  unittests.pro  willtests.cpp  willtests.h
